# vello

./: Cargo.toml  PARLEY_INTERFACE_DOCUMENTATION.md  TODO.md
src/: advanced_text.rs  drawing_ops.rs  glyph_builder.rs  lib.rs  render.rs  scene.rs  scene_core.rs  shaders.rs  util.rs  wgpu_engine.rs
src/debug/: renderer.rs
src/glyphon/: cache.rs  cell.rs  color.rs  font_system.rs  ligature.rs  ligature_config.rs  mod.rs  text_rendering.rs  texture_renderer.rs  wgpu_setup.rs
